quarkus-pipeline/src/main/kubernetes/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tdc-app
  name: tdc-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tdc-app
  template:
    metadata:
      labels:
        app: tdc-app
    spec:
      containers:
      - name: blue
        image: image-registry.openshift-image-registry.svc:5000/demo/tdc-app:2.0
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        resources:
          requests: 
            memory: "50Mi" 
            cpu: "100m" 
          limits:
            memory: "120Mi"
            cpu: "250m" 
        livenessProbe:
          httpGet:
              port: 8080
              path: /api
          initialDelaySeconds: 2
          periodSeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            port: 8080
            path: /api
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 2
