quarkus-pipeline/src/main/kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: tdc-app
  labels:
    app: tdc-app
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: tdc-app
